[package]
name = "parser-commands"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib"]

[dependencies]
dashmap = "6.1.0"
hound = "3.5.1"
serenity = "0.12.4"
songbird = { version = "0.4.6", features = ["receive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal"] }